# tork-python-sdk

./: .gitignore  CHANGELOG.md  COMPREHENSIVE_TEST_RESULTS.md  README.md  ai_adapter_test_results.txt  pyproject.toml  setup.py
docs/: AI_FRAMEWORK_TESTING_GUIDE.html  AI_FRAMEWORK_TESTING_GUIDE.md  TEST_COVERAGE_REPORT.md  TORK_COMPREHENSIVE_FRAMEWORK_MATRIX.html
tests/: __init__.py  test_adapters.py  test_adapters_comprehensive.py  test_ai_adapters_full.py  test_camel_adapter.py  test_chatdev_adapter.py  test_compliance_ccpa.py  test_compliance_coppa.py  test_compliance_ferpa.py  test_compliance_gdpr.py  test_compliance_glba.py  test_compliance_hipaa.py  test_compliance_pci_dss.py  test_compliance_soc2.py  test_core.py  test_core_comprehensive.py  test_edge_cases_integration.py  test_emerging_adapters.py  test_gpt4all_adapter.py  test_groq_adapter.py  test_industry_verticals.py  test_llm_guard_adapter.py  test_lmstudio_adapter.py  test_localai_adapter.py  test_magentic_adapter.py  test_mirascope_adapter.py  test_mistral_adapter.py  test_new_adapters.py  test_pii_au.py  test_pii_biometric.py  test_pii_eu_uk.py  test_pii_financial.py  test_pii_healthcare.py  test_pii_universal.py  test_pii_us.py  test_privategpt_adapter.py  test_pyramid_adapter.py  test_rebuff_adapter.py  test_replicate_adapter.py  test_sanic_adapter.py  (+3 more)
tests/ai_frameworks/: README.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_agentgpt_adapter.py  test_autogen_adapter.py  test_babyagi_adapter.py  test_crewai_adapter.py  test_data.py  test_dify_adapter.py  test_dspy_adapter.py  test_flowise_adapter.py  test_guardrails_ai_adapter.py  test_guidance_adapter.py  test_haystack_adapter.py  test_instructor_adapter.py  test_langchain_adapter.py  test_langflow_adapter.py  test_llamaindex_adapter.py  test_lmql_adapter.py  test_marvin_adapter.py  test_mcp_adapter.py  test_metagpt_adapter.py  test_openai_agents_adapter.py  test_outlines_adapter.py  test_pydantic_ai_adapter.py  test_semantic_kernel_adapter.py  test_superagi_adapter.py
tests/web_frameworks/: __init__.py  conftest.py  test_data.py  test_django_adapter.py  test_fastapi_adapter.py  test_flask_adapter.py  test_starlette_adapter.py
tork_governance/: __init__.py  core.py
tork_governance/adapters/: __init__.py  agentgpt.py  anthropic_sdk.py  arize.py  autogen.py  aws_bedrock.py  azure_openai.py  babyagi.py  camel_adapter.py  chatdev_adapter.py  chromadb.py  (+61 more)
(+2 files in other folders)
